Fixed navigation bar for tablet to be like phone. Fixed some spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -85,12 +85,12 @@ header .nav-top nav {
   justify-content: space-around;
   width: 45%;
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 1000px) {
   header .nav-top nav {
     width: 100%;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 1000px) {
   header .nav-top {
     flex-direction: column;
   }
