--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,14 +10,16 @@ header{
             display: flex;
             justify-content: space-around;
             width: 45%;
-            @media screen and @phone
+
+            @media screen and @tablet
             {
                 width: 100%;    
             }
         }
         border-bottom: 0.2rem dashed @navigation-border;
 
-        @media screen  and @phone{
+        @media screen and @tablet
+        {
             flex-direction: column;
             
         }
